<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sv_p4_practica1</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
	<string name="send">Send</string>
	<string name="domain">Domain</string>
	<string name="port">Port</string>
	<string name="bDomainPort">Send</string>
</resources>
