<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tVdomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/domain"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/eTdomain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tVdomain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10" />

    <TextView
        android:id="@+id/tVport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eTdomain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/eTport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tVport"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/bDomainPort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eTport"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/bDomainPort" />

</RelativeLayout>
